<resources>
    <string name="app_name">DigiPaper</string>
    <string name="txv_app_name">DigiPaper</string>
    <string name="txv_user_password">Contraseña</string>
    <string name="txv_user_mail">Correo: </string>
    <string name="btn_login_aceptar">Ingresar</string>
    <string name="title_activity_historial">Historial</string>
    <string name="txv_historial">Historial de solicitudes</string>
    <string name="txv_nombre_usuario">Usuario: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_barra_navegacion">BarraNavegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_historial">Historial</string>

    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_calificar">¡Califícanos!</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_areas_departamentos">Áreas y Departamentos</string>
    <string name="menu_acerca_de">Acerca de...</string>
    <string name="menu_preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="menu_bandeja_entrada">Bandeja de entrada</string>
    <string name="menu_historial">Historial</string>
    <string name="title_activity_areas_departamentos">AreasDepartamentos</string>
    <string name="title_activity_estado_tramite">EstadoTramite</string>
    <string name="title_activity_home">Home</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
</resources>
