<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_digipaper_02"
            android:layout_marginTop="200px"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/txv_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/txv_user_mail"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:textSize="80px" />

        <EditText
            android:id="@+id/txv_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/txv_user_password"
            android:textSize="80px"
            />
        <Button
            android:id="@+id/btn_login_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_aceptar"
            android:textSize="20dp"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/txv_user_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>